--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     ]
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "clarifai": "^2.9.0",
     "express": "^4.16.4"
   },
   "devDependencies": {
